@@ -765,4 +765,21 @@ public abstract class BaseCompoundFormatTestCase extends BaseIndexFileFormatTest
   public void testMergeStability() throws Exception {
     assumeTrue("test does not work with CFS", true);
   }
+
+  // LUCENE-6311: make sure the resource name inside a compound file confesses that it's inside a compound file
+  public void testResourceNameInsideCompoundFile() throws Exception {
+    Directory dir = newDirectory();
+    String subFile = "_123.xyz";
+    createSequenceFile(dir, subFile, (byte) 0, 10);
+    
+    SegmentInfo si = newSegmentInfo(dir, "_123");
+    si.setFiles(Collections.singletonList(subFile));
+    si.getCodec().compoundFormat().write(dir, si, IOContext.DEFAULT);
+    Directory cfs = si.getCodec().compoundFormat().getCompoundReader(dir, si, IOContext.DEFAULT);
+    IndexInput in = cfs.openInput(subFile, IOContext.DEFAULT);
+    String desc = in.toString();
+    assertTrue("resource description hides that it's inside a compound file: " + desc, desc.contains("[slice=" + subFile + "]"));
+    cfs.close();
+    dir.close();
+  }
 }
